--- a/package.json
+++ b/package.json
@@ -15,16 +15,22 @@
     "@react-navigation/native-stack": "^6.9.26",
     "@reduxjs/toolkit": "^2.2.5",
     "expo": "~51.0.9",
+    "expo-file-system": "~17.0.1",
     "expo-font": "~12.0.6",
+    "expo-image-picker": "~15.0.6",
+    "expo-location": "^16.5.5",
     "expo-splash-screen": "~0.27.4",
+    "expo-sqlite": "14.0.4",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.1",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
+    "react-native-toast-message": "^2.2.0",
     "react-native-web": "~0.19.10",
-    "react-redux": "^9.1.2"
+    "react-redux": "^9.1.2",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
